# mechanical-sympathy-poc

./: .editorconfig  .gitignore  README.md
.github/workflows/: benchmarks.yml  ci.yml
docker/: docker-compose.yml
docker/dotnet/: Dockerfile.api  Dockerfile.benchmarks  Dockerfile.console
docker/go/: Dockerfile.api  Dockerfile.benchmarks  Dockerfile.cli
docker/rust/: Dockerfile.api  Dockerfile.benchmarks  Dockerfile.cli
docs/: benchmark.md
dotnet/: Directory.Build.props  Directory.Packages.props  MechanicalSympathy.sln
dotnet/benchmarks/MechanicalSympathy.Benchmarks/: MechanicalSympathy.Benchmarks.csproj  Program.cs
dotnet/src/MechanicalSympathy.Api/: MechanicalSympathy.Api.csproj  Program.cs  appsettings.Development.json  appsettings.json
dotnet/src/MechanicalSympathy.Console/: MechanicalSympathy.Console.csproj  Program.cs
dotnet/src/MechanicalSympathy.Core/: MechanicalSympathy.Core.csproj
dotnet/src/MechanicalSympathy.Domain/: MechanicalSympathy.Domain.csproj
dotnet/tests/MechanicalSympathy.IntegrationTests/: MechanicalSympathy.IntegrationTests.csproj  (+1 more)
go/: go.mod
go/benchmarks/: false_sharing_test.go  sequential_access_test.go  single_writer_test.go
go/tests/: core_test.go  domain_test.go
rust/: Cargo.toml
rust/benches/: false_sharing.rs  sequential_access.rs  single_writer.rs
rust/src/: lib.rs
rust/src/api/: main.rs
rust/src/cli/: main.rs
rust/src/core/: agents.rs  batching.rs  cache_padding.rs  mod.rs  sequential_buffer.rs
rust/src/domain/: mod.rs  order.rs  order_book.rs  price_level.rs  trade.rs
scripts/: run-benchmarks.sh
(+45 files in other folders)
