[package]
name = "mechanical-sympathy"
version = "0.1.0"
edition = "2021"
description = "Mechanical Sympathy Principles PoC in Rust"
license = "MIT"
authors = ["Mechanical Sympathy PoC"]

[lib]
name = "mechanical_sympathy"
path = "src/lib.rs"

[[bin]]
name = "ms-cli"
path = "src/cli/main.rs"

[[bin]]
name = "ms-api"
path = "src/api/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "sync", "rt-multi-thread", "macros", "time"] }

# Concurrency primitives
crossbeam = "0.8"
parking_lot = "0.12"

# Cache line padding
cache-padded = "1.3"

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1

[[bench]]
name = "false_sharing"
harness = false

[[bench]]
name = "single_writer"
harness = false

[[bench]]
name = "sequential_access"
harness = false
